# imx93-edge-lab

./: .cursorrules  .gitignore  FEATURE_TEMPLATE.md  Manifest.json  PHASES.md  README.md  SPEC.md  memory.md
.github/: copilot-instructions.md
ai-cpp-benchmarks/: CMakeLists.txt  README.md  SPEC.md
ai-cpp-benchmarks/src/: benchmark.cpp  benchmark.hpp  main.cpp
ai-cpp-validation/: CMakeLists.txt  README.md  ele-hardware-guide.md  feature.md  host-crypto-setup.md
ai-cpp-validation/scripts/: prepare_model.sh
ai-cpp-validation/src/: crypto_engine.hpp  main.cpp  openssl_engine.cpp  openssl_engine.hpp  pkcs11_engine.cpp  pkcs11_engine.hpp  validation.cpp  validation.hpp
docs/: README.md  _config.yml  ai-benchmark-results.md  index.md  results.md
scripts/: build_native.sh  build_yocto.sh  get_models.sh
